added logos and changed nav to header

--- a/viewPrograms.htm
+++ b/viewPrograms.htm
@@ -4,12 +4,10 @@
 <link rel="stylesheet" href="jointStyle.css">
 <title>View Programs</title>
 </head>
-<body>
-<div class="container">
-<!-- Beginning of the new navigation bar html code -->
+    <header><!-- Beginning of the new navigation bar html code -->
 <!-- Testing, Testing: 1,2,3 -->
 <div id="DDNavBar">
-<h2 align=center>Global Admin</h2>
+ <h2 align="center" style="margin: 0px"><img src="Images/CRRC%20Logo_Color-01.png"  class="CRRClogo"></h2>
     <ul>
         <li></li>
   <li><a href="index.htm">Home</a></li>
@@ -66,6 +64,10 @@
   </ul>
     </div><!-- End div id=DDNavBar -->
 <!-- End of new nav bar html code -->
+    </header>
+<body>
+<div class="container">
+
 
 
 	<div class="viewProgramContainer">
@@ -141,4 +143,11 @@
 </div>
     </div>
 </body>
+     <footer>
+   <h2 align="center" style="margin: 0px"> <img src="Images/cae_logo-transparent-stroke.png" style="width: 180px;height: 180px">    
+        <img src="Images/MVCC-logo.png" style="height: 180px;">
+        <img src="Images/DHSlogo.png" style="width: 180px;height: 180px">
+        <img src="Images/NSAlogo.png" style="height: 180px">
+   </h2>
+</footer>
 </html>
