--- a/viewUsers_selectUser.htm
+++ b/viewUsers_selectUser.htm
@@ -4,12 +4,11 @@
 <link rel="stylesheet" href="jointStyle.css">
 <title>User Name</title>
 </head>
-<body>
-<div class="container">
-	<!-- Beginning of the new navigation bar html code -->
+<header>
+    <!-- Beginning of the new navigation bar html code -->
 <!-- Testing, Testing: 1,2,3 -->
 <div id="DDNavBar">
-<h2 align=center>Global Admin</h2>
+<h2 align="center" style="margin: 0px"><img src="Images/CRRC%20Logo_Color-01.png"  class="CRRClogo"></h2>
     <ul>
         <li></li>
   <li><a href="index.htm">Home</a></li>
@@ -66,6 +65,10 @@
   </ul>
     </div><!-- End div id=DDNavBar -->
 <!-- End of new nav bar html code -->
+</header>
+<body>
+<div class="container">
+	
 
 <div class="selectedUserContainer">
 		<div class="TitleHeader">
