--- a/InstitutionAdmin/IA_viewUsers.htm
+++ b/InstitutionAdmin/IA_viewUsers.htm
@@ -25,7 +25,7 @@
     <a href="javascript:void(0)" class="dropbtn">Users</a>
     <div class="dropdown-content">
       <a href="IA_viewUsers.htm">View All Users</a>
-      <a href="IA_editYourInstitutionUsers.htm">Edit Your Institution User</a>
+      <a href="IA_editInstitutionUser.htm">Edit Your Institution User</a>
       <a href="IA_addInstitutionUsers.htm">Add Institution Users</a>
     </div>
   </li>
@@ -66,6 +66,7 @@
     </div><!-- End div id=DDNavBar -->
 </header>
 <body>
+    <div class="OutContainer" style="background-color: #858fa0; margin: 0px;">
 <div class="container">
 <!-- Beginning of the new navigation bar html code -->
 <!-- Testing, Testing: 1,2,3 -->
@@ -123,14 +124,15 @@
 			</div>
     </div>
     
-		<!--End of div Container-->
-</div>
+		
+</div><!--End of div Container-->
+</div><!--End of div outContainer-->
 </body>
 <footer>
    <h2 align="center" style="margin: 0px"> <img src="Images/cae_logo-transparent-stroke.png" style="width: 180px;height: 180px">    
         <img src="Images/MVCC-logo.png" style="height: 180px;">
         <img src="Images/DHSlogo.jpg" style="width: 180px;height: 180px">
-        <img src="Images/NSFlogo.jpg" style="">
+        <img src="Images/NSAlogo.png" style="height: 180px">
    </h2>
 </footer>
 </html>
