pushing IA header and footer

--- a/InstitutionAdmin/IA_viewPrograms.htm
+++ b/InstitutionAdmin/IA_viewPrograms.htm
@@ -4,12 +4,11 @@
 <link rel="stylesheet" href="IA_Jointstyle.css">
 <title>View Programs</title>
 </head>
-<body>
-<div class="container">
-<!-- Beginning of the new navigation bar html code -->
+<header>
+    <!-- Beginning of the new navigation bar html code -->
 <!-- Testing, Testing: 1,2,3 -->
 <div id="DDNavBar">
-<h2 align=center>Institution Admin</h2>
+<h2 align="center" style="margin: 0px"><img src="Images/CRRC%20Logo_Color-01.png"  class="CRRClogo"></h2>
     <ul>
         <li></li>
   <li><a href="IA_Index.htm">Home</a></li>
@@ -66,6 +65,10 @@
   
   </ul>
     </div><!-- End div id=DDNavBar -->
+
+</header>
+<body>
+<div class="container">
     
 
 	<div class="viewProgramsContainer">
@@ -141,4 +144,11 @@
 </div>
     </div>
 </body>
+    <footer>
+    <h2 align="center" style="margin: 0px"> <img src="Images/cae_logo-transparent-stroke.png" style="width: 180px;height: 180px">    
+        <img src="Images/MVCC-logo.png" style="height: 180px;">
+        <img src="Images/DHSlogo.jpg" style="width: 180px;height: 180px">
+        <img src="Images/NSAlogo.png" style="height: 180px">
+   </h2>
+</footer>
 </html>
