--- a/InstitutionAdmin/IA_editInstitutionUser.htm
+++ b/InstitutionAdmin/IA_editInstitutionUser.htm
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
    <head>
-      <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
-      <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+     
+      <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+      <script type="text/javascript" src="Script/IA_script.js"></script>
       <link rel="stylesheet" href="IA_Jointstyle.css">
       <title>Edit Institute Users</title>
       <link rel="icon" type="image/png" href="Images/cae_logo-transparent-stroke.png" />
@@ -10,8 +11,8 @@
    <header>
       <!-- Beginning of the new navigation bar html code -->
       <!-- Testing, Testing: 1,2,3 -->
-      <div id="DDNavBar">
-         <h2 align="center" style="margin: 0px"><img src="Images/CRRC%20Logo_Color-01.png"  class="CRRClogo"></h2>
+       <h2 align="center" style="margin: 0px"><img src="Images/CRRC%20Logo_Color-01.png"  class="CRRClogo"></h2>
+       <div id="DDNavBar">
          <ul>
             <li></li>
             <li><a href="IA_Index.htm">Home</a></li>
