--- a/InstitutionAdmin/IA_addCourse.htm
+++ b/InstitutionAdmin/IA_addCourse.htm
@@ -2,18 +2,17 @@
 <html>
    <head>
       <link rel="stylesheet" href="IA_jointStyle.css">
-      <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
-      <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
-      <script type="text/javascript" src="script.js"></script>
-      <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
       <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+       <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+      <script type="text/javascript" src="Script/IA_script.js"></script>
       <title>Add Courses</title>
    </head>
     
     <header>
     <!-- Testing, Testing: 1,2,3 -->
+          <h2 align="center" style="margin: 0px"><img src="Images/CRRC%20Logo_Color-01.png"  class="CRRClogo"></h2>
 <div id="DDNavBar">
-<h2 align=center>CSSIA Database</h2>
+
     <ul>
         <li></li>
   <li><a href="IA_Index.htm">Home</a></li>
@@ -211,4 +210,11 @@
          </div> <!-- end div class="addCourseContainer" -->
       </div> <!-- end div class="container" -->
    </body>
+    <footer>
+      <h2 align="center" style="margin: 0px"> <img src="Images/cae_logo-transparent-stroke.png" style="width: 180px;height: 180px">    
+         <img src="Images/MVCC-logo.png" style="height: 180px;">
+         <img src="Images/DHSlogo.jpg" style="width: 180px;height: 180px">
+         <img src="Images/NSAlogo.png" style="height: 180px">
+      </h2>
+   </footer>
 </html>
