--- a/InstitutionAdmin/IA_selectedInstitution.htm
+++ b/InstitutionAdmin/IA_selectedInstitution.htm
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html>
    <head>
-      <link class="jsbin" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1/themes/base/jquery-ui.css" rel="stylesheet" type="text/css" />
-      <script class="jsbin" src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
-      <script class="jsbin" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.0/jquery-ui.min.js"></script>
+       <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
+      <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+      <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+      <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+      <script type="text/javascript" src="Script/IA_script.js"></script>
       <link rel="stylesheet" href="IA_Jointstyle.css">
       <title>View Institutions</title>
    </head>
     
     <header>
     <!-- Testing, Testing: 1,2,3 -->
+        <h2 align="center" style="margin: 0px"><img src="Images/CRRC%20Logo_Color-01.png"  class="CRRClogo"></h2>
 <div id="DDNavBar">
-<h2 align=center>CSSIA Database</h2>
     <ul>
         <li></li>
   <li><a href="IA_Index.htm">Home</a></li>
@@ -388,4 +390,11 @@
           </div> <!-- end div class="selectedInstitutionContainer" -->
       </div> <!--End of div Container-->
    </body>
+      <footer>
+      <h2 align="center" style="margin: 0px"> <img src="Images/cae_logo-transparent-stroke.png" style="width: 180px;height: 180px">    
+         <img src="Images/MVCC-logo.png" style="height: 180px;">
+         <img src="Images/DHSlogo.jpg" style="width: 180px;height: 180px">
+         <img src="Images/NSAlogo.png" style="height: 180px">
+      </h2>
+   </footer>
 </html>
