--- a/InstitutionAdmin/IA_viewPrograms.htm
+++ b/InstitutionAdmin/IA_viewPrograms.htm
@@ -3,12 +3,17 @@
 <head>
 <link rel="stylesheet" href="IA_Jointstyle.css">
 <title>View Programs</title>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
+      <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+      <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+      <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+      <script type="text/javascript" src="Script/IA_script.js"></script>
 </head>
 <header>
     <!-- Beginning of the new navigation bar html code -->
 <!-- Testing, Testing: 1,2,3 -->
-<div id="DDNavBar">
 <h2 align="center" style="margin: 0px"><img src="Images/CRRC%20Logo_Color-01.png"  class="CRRClogo"></h2>
+    <div id="DDNavBar">
     <ul>
         <li></li>
   <li><a href="IA_Index.htm">Home</a></li>
