--- a/InstitutionAdmin/IA_viewUsers.htm
+++ b/InstitutionAdmin/IA_viewUsers.htm
@@ -4,10 +4,15 @@
 <link rel="stylesheet" href="IA_Jointstyle.css">
 <title>View Users</title>
 <link rel="icon" type="image/png" href="Images/cae_logo-transparent-stroke.png" />
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
+      <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+      <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+      <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+      <script type="text/javascript" src="Script/IA_script.js"></script>
 </head>
 <header>
+    <h2 align="center" style="margin: 0px"><img src="Images/CRRC%20Logo_Color-01.png"  class="CRRClogo"></h2>
     <div id="DDNavBar">
-        <h2 align="center" style="margin: 0px"><img src="Images/CRRC%20Logo_Color-01.png"  class="CRRClogo"></h2>
     <ul>
         <li></li>
   <li><a href="IA_Index.htm">Home</a></li>
