--- a/viewCourse.htm
+++ b/viewCourse.htm
@@ -11,7 +11,7 @@
     <header>
         <!-- Testing, Testing: 1,2,3 -->
          <div id="DDNavBar"><!-- Navigation bar -->
-            <h2 align=center>CSSIA Database</h2>
+           <h2 align="center" style="margin: 0px"><img src="Images/CRRC%20Logo_Color-01.png"  class="CRRClogo"></h2>
             <ul>
                <li></li>
                <li><a href="index.htm">Home</a></li>
@@ -384,8 +384,12 @@
       </div> <!-- End div class="container" -->
    </body>
     
-    <footer>
-    <p>Pictures Go Here</p>
-    </footer>
+   <footer>
+      <h2 align="center" style="margin: 0px"> <img src="Images/cae_logo-transparent-stroke.png" style="width: 180px;height: 180px">    
+         <img src="Images/MVCC-logo.png" style="height: 180px;">
+         <img src="Images/DHSlogo.png" style="width: 180px;height: 180px">
+         <img src="Images/NSAlogo.png" style="height: 180px">
+      </h2>
+   </footer>
     
 </html>
