--- a/InstitutionAdmin/IA_addCourse.htm
+++ b/InstitutionAdmin/IA_addCourse.htm
@@ -20,7 +20,7 @@
   <li class="dropdown" style="float:right">
     <a href="javascript:void(0)" class="dropbtn">Institution Admin Profile</a>
     <div class="dropdown-content">
-      <a href="#">View User Profile</a>
+      <a href="IA_viewInstitutionUsersProfile.htm">View User Profile</a>
       <a href="IA_InstituteProfile.htm">View Institution Profile</a>
       <a href="#">Logout</a>
     </div>
