--- a/InstitutionAdmin/IA_addInstitutionUsers.htm
+++ b/InstitutionAdmin/IA_addInstitutionUsers.htm
@@ -5,9 +5,9 @@
       <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
       <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
       <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-      <script type="text/javascript" src="Script/IA_script.js"></script>
       <link rel="stylesheet" href="IA_Jointstyle.css">
       <title>Add Institute Users</title>
+       <script type="text/javascript" src="Script/IA_script.js"></script>
    </head>
   <header>
       <h2 align="center" style="margin: 0px"><img src="Images/CRRC%20Logo_Color-01.png"  class="CRRClogo"></h2>
@@ -18,7 +18,7 @@
             <li class="dropdown" style="float:right">
                <a href="javascript:void(0)" class="dropbtn">Institution Admin Profile</a>
                <div class="dropdown-content">
-                  <a href="#">View User Profile</a>
+                  <a href="IA_viewInstitutionUsersProfile.htm">View User Profile</a>
                   <a href="IA_InstituteProfile.htm">View Institution Profile</a>
                   <a href="#">Logout</a>
                </div>
