--- a/InstitutionAdmin/IA_selectedPrograms.htm
+++ b/InstitutionAdmin/IA_selectedPrograms.htm
@@ -2,16 +2,15 @@
 <html>
    <head>
       <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
-      
       <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-      <script type="text/javascript" src="Script/IA_script.js"></script>
       <link rel="stylesheet" href="IA_Jointstyle.css">
       <title>Selected Program</title>
+            <script type="text/javascript" src="Script/IA_script.js"></script>
    </head>
    <header>
       <!-- Beginning of the new navigation bar html code -->
       <!-- Testing, Testing: 1,2,3 -->
-       <h2 align="center" ><img src="Images/CRRC%20Logo_Color-01.png"  class="CRRClogo"></h2>
+       <h2 align="center" ><img src="Images/CRRC%20Logo_Color-01.png" class="CRRClogo"></h2>
        <div id="DDNavBar">
           <ul>
             <li></li>
@@ -19,7 +18,7 @@
             <li class="dropdown" style="float:right">
                <a href="javascript:void(0)" class="dropbtn">Institution Admin Profile</a>
                <div class="dropdown-content">
-                  <a href="#">View User Profile</a>
+                 <a href="IA_viewInstitutionUsersProfile.htm">View User Profile</a>
                   <a href="IA_InstituteProfile.htm">View Institution Profile</a>
                   <a href="#">Logout</a>
                </div>
