--- a/viewUsers.htm
+++ b/viewUsers.htm
@@ -3,6 +3,7 @@
 <head>
 <link rel="stylesheet" href="jointStyle.css">
 <title>View Users</title>
+<script type="text/javascript" src="Script/script.js"></script>
 </head>
     <header>
         <!-- Beginning of the new navigation bar html code -->
