Kevin Loves to Commit

--- a/addInstitution.htm
+++ b/addInstitution.htm
@@ -3,16 +3,15 @@
     
    <head>
       <link rel="stylesheet" href="jointStyle.css">
-      <link class="jsbin" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1/themes/base/jquery-ui.css" rel="stylesheet" type="text/css" />
-      <script class="jsbin" src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
-      <script class="jsbin" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.0/jquery-ui.min.js"></script>
       <title>Add Institutions</title>
+        <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+      <script type="text/javascript" src="Script/script.js"></script>
    </head>
     
     <header>
     <!-- Testing, Testing: 1,2,3 -->          
-         <div id="DDNavBar"><!-- Navigation Bar -->            
-            <h2 align="center" style="margin: 0px"><img src="Images/CRRC%20Logo_Color-01.png"  class="CRRClogo"></h2>
+        <h2 align="center" style="margin: 0px"><img src="Images/CRRC%20Logo_Color-01.png"  class="CRRClogo"></h2> 
+        <div id="DDNavBar"><!-- Navigation Bar -->            
             <ul>
                <li></li>
                <li><a href="index.htm">Home</a></li>
