--- a/removeAgreement.htm
+++ b/removeAgreement.htm
@@ -3,12 +3,15 @@
    <head>
       <link rel="stylesheet" href="jointStyle.css">
       <title>Remove Transfer Agreement</title>
+       <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+      <script type="text/javascript" src="Script/script.js"></script>
    </head>
     
     <header>
     <!-- Testing, Testing: 1,2,3 -->
-         <div id="DDNavBar">
-            <h2 align="center" style="margin: 0px"><img src="Images/CRRC%20Logo_Color-01.png"  class="CRRClogo"></h2>
+        <h2 align="center" style="margin: 0px"><img src="Images/CRRC%20Logo_Color-01.png"  class="CRRClogo"></h2>
+        <div id="DDNavBar">
+            
             <ul>
                <li></li>
                <li><a href="index.htm">Home</a></li>
