--- a/createAgreement.htm
+++ b/createAgreement.htm
@@ -5,7 +5,7 @@
       <link rel="stylesheet" href="jointStyle.css">
       <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
       <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
-      <script type="text/javascript" src="script.js"></script>
+      <script type="text/javascript" src="Script/script.js"></script>
       <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
       <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
       <title>Create Transfer Agreement</title>
@@ -13,9 +13,9 @@
     
     <header>
         <!-- Testing, Testing: 1,2,3 -->
-         <div id="DDNavBar">
-             <h2 align="center" style="margin: 0px"><img src="Images/CRRC%20Logo_Color-01.png"  class="CRRClogo"></h2>
-            <ul>
+        <h2 align="center" style="margin: 0px"><img src="Images/CRRC%20Logo_Color-01.png"  class="CRRClogo"></h2> 
+        <div id="DDNavBar">
+             <ul>
                <li></li>
                <li><a href="index.htm">Home</a></li>
                <li class="dropdown" style="float:right">
